--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
-Django>=4.2,<5.0
-djangorestframework>=3.14,<3.15
-requests>=2.31
-python-dotenv>=1.0.1
-django-cors-headers>=4.4.0
+asgiref==3.9.1
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.6
+Django==5.2.4
+django-cors-headers==4.7.0
+django-extensions==4.1
+djangorestframework==3.16.0
+GDAL==3.11.3
+idna==3.10
+MarkupSafe==3.0.2
+psycopg==3.2.9
+psycopg-binary==3.2.9
+pycparser==2.22
+pyOpenSSL==25.1.0
+python-dotenv==1.1.1
+requests==2.32.4
+sqlparse==0.5.3
+urllib3==2.5.0
+Werkzeug==3.1.3
